force-app/main/default/objects/Account/fields/Billing_Attention__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attention__c</fullName>
    <label>Billing Attention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>