force-app/main/default/objects/Account/fields/Biz_Dev__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>