force-app/main/default/objects/Account/fields/Biz_Dev_Support__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>