force-app/main/default/objects/Account/fields/bizdev__c.field-meta.xml
<CustomField>
    <fullName>bizdev__c</fullName>
    <label>Biz Dev Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>