force-app/main/default/objects/Account/fields/bizdevsupport__c.field-meta.xml
<CustomField>
    <fullName>bizdevsupport__c</fullName>
    <label>Biz Dev Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>