force-app/main/default/objects/Account/fields/Business_Development_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Pillar__c</fullName>
    <label>Business Development Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerging Markets</fullName>
            </value>
            <value>
                <fullName>Cannabis Top 150</fullName>
            </value>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>