force-app/main/default/objects/Account/fields/Cannabis_License__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_License__c</fullName>
    <label>Cannabis License #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>