force-app/main/default/objects/Account/fields/Company_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Tax_ID__c</fullName>
    <description>Company Tax ID Number</description>
    <label>Company Tax ID #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>