force-app/main/default/objects/Account/fields/ConvertedLeadCheck__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadCheck__c</fullName>
    <label>ConvertedLeadCheck</label>
    <length>40</length>
    <type>Text</type>
</CustomField>