force-app/main/default/objects/Account/fields/Credit_limit_SAP_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit_SAP_EMEA__c</fullName>
    <label>Credit limit SAP EMEA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>