force-app/main/default/objects/Account/fields/Custom_Terms_Detail__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms_Detail__c</fullName>
    <label>Custom Terms Detail</label>
    <type>TextArea</type>
</CustomField>