force-app/main/default/objects/Account/fields/Customs_broker_email_address__c.field-meta.xml
<CustomField>
    <fullName>Customs_broker_email_address__c</fullName>
    <description>Customs broker email address</description>
    <label>Customs broker email address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>