force-app/main/default/objects/Account/fields/Fluence_Capital_Support__c.field-meta.xml
<CustomField>
    <fullName>Fluence_Capital_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fluence Capital Support</label>
    <type>Checkbox</type>
</CustomField>