force-app/main/default/objects/Account/fields/High_Value_Account__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Value Account</label>
    <type>Checkbox</type>
</CustomField>