force-app/main/default/objects/Account/fields/ING_Status__c.field-meta.xml
<CustomField>
    <fullName>ING_Status__c</fullName>
    <label>ING Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blacklist</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Whitelist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>