force-app/main/default/objects/Account/fields/Magentrix_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Magentrix_Account_Type__c</fullName>
    <label>Magentrix Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor/Reseller</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>