force-app/main/default/objects/Account/fields/MSA_Status__c.field-meta.xml
<CustomField>
    <fullName>MSA_Status__c</fullName>
    <label>MSA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pursuing</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>