force-app/main/default/objects/Account/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partner_Status</valueSetName>
    </valueSet>
</CustomField>