force-app/main/default/objects/Account/fields/Preferred_customs_broker_name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_customs_broker_name__c</fullName>
    <description>Preferred customs broker name</description>
    <label>Preferred customs broker name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>