force-app/main/default/objects/Account/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Team</valueSetName>
    </valueSet>
</CustomField>