force-app/main/default/objects/Account/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <label>SAP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>