force-app/main/default/objects/Account/fields/Ship_to_number_SAP_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_number_SAP_EMEA__c</fullName>
    <label>Ship-to number SAP EMEA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>