force-app/main/default/objects/Account/fields/Sold_to_number_SAP_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_number_SAP_EMEA__c</fullName>
    <label>Sold-to number SAP EMEA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>