force-app/main/default/objects/Account/fields/SUG_ACCOUNTID__c.field-meta.xml
<CustomField>
    <fullName>SUG_ACCOUNTID__c</fullName>
    <label>SUG ACCOUNTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>