force-app/main/default/objects/Account/validationRules/Account_Name_Max_Lenght_60.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Max_Lenght_60</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name ) &gt; 60</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The maximum length of the Account Name field must be 60 characters</errorMessage>
</ValidationRule>