force-app/main/default/objects/Account/validationRules/Billing_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.Account_Validation_Rule__c= FALSE,
ISBLANK( External_ERP_ID__c ) ,
OR(
ISBLANK ( BillingCity ),
ISBLANK ( BillingCountry ),
ISBLANK ( BillingStreet ),
ISBLANK ( BillingPostalCode))
 )</errorConditionFormula>
    <errorMessage>Billing Address is Required</errorMessage>
</ValidationRule>